# fm

./: .gitignore  Makefile  README.md  meson.build
include/: common.h  db_manager.h  error_handler.h  file_manager.h
src/: db_manager.c  error_handler.c  file_manager.c  main.c
